--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -1,6 +1,5 @@
 .layout {
   height: 100%;
-  background-color: yellow;
   display: flex;
   flex-direction: column;
 }
@@ -12,12 +11,13 @@
 }
 
 .nav {
-  background-color: pink;
+  background-image: url("../../../public/assets/images/bg-sidebar-mobile.svg");
+  background-size: cover;
+  width: 100%;
   height: 170px;
 }
 
 .content-bg { 
-  background-color: aqua;
   flex: 1;
   position: relative;
 }
@@ -29,6 +29,7 @@
   left: 50%;
   transform: translateX(-50%);
   top: -70px;
+  padding: 34px 24px;
 }
 
 .buttons {
@@ -42,7 +43,6 @@
     width: 900px;
     height: 600px;
     display: flex;
-    background-color: yellow;
   }
 
   .divider {
@@ -50,9 +50,9 @@
   }
 
   .nav {
-    width: 300px;
+    width: 260px;
     height: 100%;
-    background-color: pink;
+    background-image: url("../../../public/assets/images/bg-sidebar-desktop.svg");
   }
 
   .content-bg {
@@ -65,6 +65,6 @@
     width: 100%;
     height: 100%;
     transform: none;
-    top: -70px;
+    top: -76px;
   }
 }
