--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -4,7 +4,7 @@
   flex-direction: column;
 }
 
-.divider {
+.container {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -30,6 +30,9 @@
   transform: translateX(-50%);
   top: -70px;
   padding: 34px 24px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 8px;
+  top: -76px;
 }
 
 .buttons {
@@ -40,12 +43,16 @@
 
 @media only screen and (min-width: 600px) {
   .layout {
-    width: 900px;
-    height: 600px;
+    width: 946px;
+    height: 604px;
     display: flex;
+    padding: 16px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 8px;
   }
 
-  .divider {
+  .container {
     flex-direction: row;
   }
 
@@ -65,6 +72,8 @@
     width: 100%;
     height: 100%;
     transform: none;
-    top: -76px;
+    box-shadow: none;
+    border-radius: 0%;
+    padding: 42px 92px;
   }
 }
