--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -1,20 +1,12 @@
 .layout {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  display: grid;
+  grid-template-rows: 170px 1fr 70px;
 }
 
 .nav {
   background-image: url("../../../public/assets/images/bg-sidebar-mobile.svg");
   background-size: cover;
-  width: 100%;
-  height: 170px;
 }
 
 .content-bg { 
@@ -37,7 +29,6 @@
 
 .buttons {
   background-color: greenyellow;
-  height: 70px;
 }
 
 
@@ -45,24 +36,25 @@
   .layout {
     width: 946px;
     height: 604px;
-    display: flex;
     padding: 16px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 8px;
-  }
+    grid-template-areas:
+    "nav content"
+    "nav actions";
+    grid-template-columns: 260px 1fr;
+    grid-template-rows: 1fr 70px;
 
-  .container {
-    flex-direction: row;
   }
 
   .nav {
-    width: 260px;
-    height: 100%;
+    grid-area: nav;
     background-image: url("../../../public/assets/images/bg-sidebar-desktop.svg");
   }
 
   .content-bg {
+    grid-area: content;
     position: initial;
     flex: 1;
   }
@@ -75,5 +67,9 @@
     box-shadow: none;
     border-radius: 0%;
     padding: 42px 92px;
+  }
+
+  .buttons {
+    grid-area: actions;
   }
 }
