--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,11 @@
 .App {
   width: 100%;
   height: 100%;
+  background-color: var(--Magnolia);
 }
 
 @media only screen and (min-width: 600px) {
-  /* mobile */
-  body {
-    background-color: lightblue;
-  }
+  /* desktop */
   .App {
     display: flex;
     justify-content: center;
