--- a/src/components/Form/styles.css
+++ b/src/components/Form/styles.css
@@ -1,3 +1,7 @@
+.form {
+  height: 100%;
+}
+
 .form__title {
   color: var(--Marine-blue);
   height: 2.5rem;
@@ -5,4 +9,5 @@
 
 .form__description {
   color: var(--Cool-gray);
+  padding-bottom: 32px;
 }
