--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -42,9 +42,11 @@
 
 @media only screen and (min-width: 600px) {
   .layout {
-    width: 946px;
+    max-width: 946px;
+    width: 100%;
     height: 604px;
     padding: 16px;
+    margin: 0 auto;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 8px;
@@ -69,12 +71,14 @@
 
   .content {
     position: inherit;
+    max-width: 460px;
     width: 100%;
     height: 100%;
     transform: none;
     box-shadow: none;
     border-radius: 0%;
-    padding: 42px 92px;
+    padding: 42px 0;
+    margin: 0 auto;
   }
 
   .actions {
@@ -83,7 +87,9 @@
   }
 
   .buttons {
+    max-width: 460px;
     width: 100%;
-    padding: 0 92px;
+    margin: 0 auto;
+
   }
 }
