--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -17,7 +17,9 @@
 .content {
   background-color: white;
   position: absolute;
-  width: 340px;
+  max-width: 340px;
+  width: 100%;
+  margin: 0 auto;
   left: 50%;
   transform: translateX(-50%);
   padding: 34px 24px;
@@ -32,7 +34,8 @@
 }
 
 .buttons {
-  width: 340px;
+  max-width: 340px;
+  width: 100%;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -90,6 +93,5 @@
     max-width: 460px;
     width: 100%;
     margin: 0 auto;
-
   }
 }
