--- a/src/components/MultiStepForm/styles.css
+++ b/src/components/MultiStepForm/styles.css
@@ -1,4 +1,4 @@
-.layout {
+.multi-step-form {
   height: 100%;
   display: grid;
   grid-template-rows: 170px 1fr 70px;
@@ -44,7 +44,7 @@
 
 
 @media only screen and (min-width: 600px) {
-  .layout {
+  .multi-step-form {
     max-width: 946px;
     width: 100%;
     height: 604px;
