--- a/src/components/SwitchBetweenTwo/styles.css
+++ b/src/components/SwitchBetweenTwo/styles.css
@@ -6,7 +6,7 @@
   gap: 20px;
   align-items: center;
   justify-content: center;
-  background-color: var(--Magnolia);
+  background-color: var(--Alabaster);
 }
 
 .switch_between_two span {
